--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +20,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Defining dataclass \"Node\"**\n",
+    "### Defining dataclasses\n",
     "\n",
-    "Every person in the simulation is a node.\n",
+    "* **Node** <br>\n",
+    "  Every person in the simulation is a node. <br>\n",
+    "  For now only contains a list of its neighbors, which are also Nodes.\n",
     "\n",
-    "For now only contains a list of its neighbors.\n",
-    "\n",
-    "*Question:* usually when defining a class parameter (?) that is a list you would write something like ```thing: list[int]```,\n",
-    "but I can't write ```neighbors: list[Node]``` because Node is not defined yet\n",
-    "(when I run it it does work but it's just because the notebook already knows what Node is).\n",
-    "So I just wrote ```neighbors: list``` but is it the right thing to write?"
+    "* **Graph** <br>\n",
+    "  A class for all of the graphs. <br>\n",
+    "  Contains a list of the Nodes in the graph. <br>\n",
+    "  for example in this case we will have one \"Icelandic\" Graph and one \"English\" Graph."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "@dataclass\n",
     "class Node:\n",
-    "    neighbors: list"
+    "    neighbors: list[\"Node\"]\n",
+    "\n",
+    "@dataclass\n",
+    "class Graph:\n",
+    "    nodes: list[Node]"
    ]
   }
  ],
