added create_edge function

--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -29,12 +29,13 @@
     "* **Graph** <br>\n",
     "  A class for all of the graphs. <br>\n",
     "  Contains a list of the Nodes in the graph. <br>\n",
-    "  for example in this case we will have one \"Icelandic\" Graph and one \"English\" Graph."
+    "  for example in this case we will have one \"Icelandic\" Graph and one \"English\" Graph. <br>\n",
+    "  *`create_edge` function:* gets two nodes. If they are both in the graph, each one is added to the other's list of neighbors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +45,28 @@
     "\n",
     "@dataclass\n",
     "class Graph:\n",
-    "    nodes: list[Node]"
+    "    nodes: list[Node]\n",
+    "\n",
+    "    def create_edge(self, node1, node2) -> None:\n",
+    "        if node1 not in self.nodes or node2 not in self.nodes:\n",
+    "            return\n",
+    "        node1.neighbors.append(node2)\n",
+    "        node2.neighbors.append(node1)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
