--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -13,26 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Defining constants\n",
-    "\n",
-    "* **NODE_NUM** <br>\n",
-    "  Number of nodes in each graph."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NODE_NUM = 4"
+    "from dataclasses import dataclass\n",
+    "import random"
    ]
   },
   {
@@ -54,19 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
     "    def __init__(self):\n",
     "        self.neighbors: list[\"Node\"] = []\n",
-    "    \n",
-    "    def __str__(self) -> str:\n",
+    "        \n",
+    "    def __repr__(self):\n",
     "        return f\"Node[{len(self.neighbors)}]\"\n",
     "    \n",
-    "    def __repr__(self):\n",
-    "        return str(self)\n",
+    "    def degree(self) -> int:\n",
+    "        return len(self.neighbors)\n",
+    "\n",
     "\n",
     "class Graph:\n",
     "    def __init__(self):\n",
@@ -95,38 +78,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = Graph()\n",
-    "\n",
-    "for i in range(NODE_NUM):\n",
-    "    g.nodes.append(Node())\n",
-    "    for j in range(len(g.nodes)-1):\n",
-    "        g.create_edge(g.nodes[i], g.nodes[j])\n",
-    "\n",
-    "# for node1 in g.nodes:\n",
-    "#     for node2 in g.nodes:\n",
-    "#         if node2 != node1:\n",
-    "#             g.create_edge(node1, node2)"
+    "def create_graph(node_num: int, edge_prob: float) -> Graph:\n",
+    "    g = Graph()\n",
+    "    for i in range(node_num):\n",
+    "        g.nodes.append(Node())\n",
+    "        for j in range(len(g.nodes)-1):\n",
+    "            if random.random() < edge_prob:\n",
+    "                g.create_edge(g.nodes[i], g.nodes[j])\n",
+    "    return g"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Node[3], Node[3], Node[3], Node[3]]\n"
+      "[Node[15], Node[4], Node[14], Node[11], Node[6], Node[7], Node[6], Node[12], Node[10], Node[10], Node[13], Node[10], Node[14], Node[11], Node[9], Node[11], Node[11], Node[7], Node[11], Node[8], Node[11], Node[8], Node[13], Node[7], Node[9], Node[7], Node[10], Node[6], Node[9], Node[10], Node[10], Node[11], Node[9], Node[11], Node[6], Node[12], Node[9], Node[11], Node[12], Node[11], Node[10], Node[8], Node[9], Node[9], Node[10], Node[10], Node[12], Node[8], Node[12], Node[10]]\n",
+      "9.8\n"
      ]
     }
    ],
    "source": [
-    "print(g)"
+    "a = create_graph(50, 0.2)\n",
+    "total = 0\n",
+    "for n in a.nodes:\n",
+    "    total += n.degree()\n",
+    "print(a)\n",
+    "print(total/50)"
    ]
   }
  ],
