added some documentation

--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imports:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,17 +28,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defining classes\n",
-    "\n",
+    "### Defining classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* **Node** <br>\n",
-    "  Every person in the simulation is a node. <br>\n",
-    "  For now only contains a list of its neighbors, which are also Nodes.\n",
+    "  Every person in the simulation is a node.\n",
+    "  * `neighbors`: a list of all of the Node's neighbors, which are also Nodes.\n",
+    "  * `degree()`: returns the number of neighbors the Node has -- its \"degree\".\n",
     "\n",
     "* **Graph** <br>\n",
     "  A class for all of the graphs. <br>\n",
     "  Contains a list of the Nodes in the graph. <br>\n",
-    "  For example in this case we will have one \"Icelandic\" Graph and one \"English\" Graph. <br>\n",
-    "  *`create_edge` function:* gets two nodes. If they are both in the graph, each one is added to the other's list of neighbors."
+    "  For example in this case we will have one \"Icelandic\" Graph and one \"English\" Graph.\n",
+    "  * `nodes`: a list of all of the Nodes in this Graph.\n",
+    "  * `create_edge`: gets two nodes. If they are both in the graph and are not already neighbors, each one is added to the other's list of neighbors, thus creating an edge between them."
    ]
   },
   {
@@ -71,9 +85,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating Graph\n",
+    "### Creating Graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function gets the following parameters:\n",
+    "* `node_num`: the number of Nodes that are going to be in the Graph.\n",
+    "* `edge_prob`: the probability two random nodes would have an edge between them.\n",
+    "And returns a Graph.\n",
     "\n",
-    "TODO: am still not sure this works. Need to go. /:"
+    "Every iteration, the function creates a node, then goes over all of the nodes that were already created (this way the same pair of nodes will not occur twice). After going through the probability check, it creates an edge between the two nodes using `create_edge`."
    ]
   },
   {
@@ -90,6 +114,13 @@
     "            if random.random() < edge_prob:\n",
     "                g.create_edge(g.nodes[i], g.nodes[j])\n",
     "    return g"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing:"
    ]
   },
   {
