added friend groups, not sure this works

--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -57,13 +57,14 @@
     "class Node:\n",
     "    def __init__(self):\n",
     "        self.neighbors: list[\"Node\"] = []\n",
+    "        self.friend_group: float = random.random()\n",
     "        \n",
     "    def __repr__(self):\n",
     "        return f\"Node[{len(self.neighbors)}]\"\n",
     "    \n",
     "    def degree(self) -> int:\n",
     "        return len(self.neighbors)\n",
-    "\n",
+    "    \n",
     "\n",
     "class Graph:\n",
     "    def __init__(self):\n",
@@ -97,12 +98,19 @@
     "* `edge_prob`: the probability two random nodes would have an edge between them.\n",
     "And returns a Graph.\n",
     "\n",
-    "Every iteration, the function creates a node, then goes over all of the nodes that were already created (this way the same pair of nodes will not occur twice). After going through the probability check, it creates an edge between the two nodes using `create_edge`."
+    "`friendliness`: The difference between the friend group of `g.nodes[i]` and `g.nodes[j]`, i.e. the two nodes we want to connect.\n",
+    "\n",
+    "Every iteration, the function creates a node, then goes over all of the nodes that were already created (this way the same pair of nodes will not occur twice). After going through the probability check, it creates an edge between the two nodes using `create_edge`.\n",
+    "\n",
+    "**TODO**: not sure how to confirm that the friendliness probability check works\n",
+    "\n",
+    "**TODO**: the friendliness thing makes it much more probable to have an edge between two nodes (because it is added to `edge_prob`). That means if `edge_prob` is 0.5 and `node_num` is 100, the average number of neighbors for each node will be around 78, while before the friendliness addition it would have been 50. Not really sure if that's a problem, and if it is how to solve it.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +119,8 @@
     "    for i in range(node_num):\n",
     "        g.nodes.append(Node())\n",
     "        for j in range(len(g.nodes)-1):\n",
-    "            if random.random() < edge_prob:\n",
+    "            friendliness = abs(g.nodes[i].friend_group - g.nodes[j].friend_group)\n",
+    "            if random.random() < edge_prob + friendliness:\n",
     "                g.create_edge(g.nodes[i], g.nodes[j])\n",
     "    return g"
    ]
@@ -125,25 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Node[15], Node[4], Node[14], Node[11], Node[6], Node[7], Node[6], Node[12], Node[10], Node[10], Node[13], Node[10], Node[14], Node[11], Node[9], Node[11], Node[11], Node[7], Node[11], Node[8], Node[11], Node[8], Node[13], Node[7], Node[9], Node[7], Node[10], Node[6], Node[9], Node[10], Node[10], Node[11], Node[9], Node[11], Node[6], Node[12], Node[9], Node[11], Node[12], Node[11], Node[10], Node[8], Node[9], Node[9], Node[10], Node[10], Node[12], Node[8], Node[12], Node[10]]\n",
-      "9.8\n"
+      "[Node[82], Node[83], Node[83], Node[80], Node[74], Node[67], Node[80], Node[86], Node[78], Node[83], Node[83], Node[73], Node[87], Node[69], Node[80], Node[76], Node[85], Node[71], Node[74], Node[76], Node[82], Node[76], Node[74], Node[82], Node[80], Node[83], Node[68], Node[92], Node[89], Node[82], Node[80], Node[83], Node[75], Node[77], Node[76], Node[75], Node[75], Node[76], Node[77], Node[72], Node[74], Node[74], Node[81], Node[72], Node[87], Node[82], Node[73], Node[80], Node[81], Node[75], Node[89], Node[87], Node[74], Node[77], Node[79], Node[83], Node[82], Node[78], Node[82], Node[77], Node[86], Node[82], Node[81], Node[82], Node[79], Node[83], Node[77], Node[76], Node[70], Node[84], Node[79], Node[78], Node[70], Node[75], Node[76], Node[78], Node[65], Node[89], Node[87], Node[76], Node[80], Node[88], Node[87], Node[79], Node[78], Node[81], Node[76], Node[86], Node[78], Node[77], Node[84], Node[78], Node[73], Node[79], Node[76], Node[84], Node[83], Node[81], Node[78], Node[76]]\n",
+      "79.06\n"
      ]
     }
    ],
    "source": [
-    "a = create_graph(50, 0.2)\n",
+    "NUM_NODES = 100\n",
+    "a = create_graph(NUM_NODES, 0.5)\n",
     "total = 0\n",
     "for n in a.nodes:\n",
     "    total += n.degree()\n",
     "print(a)\n",
-    "print(total/50)"
+    "print(total/NUM_NODES)"
    ]
   }
  ],
