--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,11 +110,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_graph(node_num: int, edge_prob: float) -> Graph:\n",
+    "def create_graph_simple(node_num: int, edge_prob: float) -> Graph:\n",
+    "    g = Graph()\n",
+    "    for i in range(node_num):\n",
+    "        g.nodes.append(Node())\n",
+    "        for j in range(len(g.nodes)-1):\n",
+    "            if random.random() < edge_prob:\n",
+    "                g.create_edge(g.nodes[i], g.nodes[j])\n",
+    "    return g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_graph_w_friend(node_num: int, edge_prob: float) -> Graph:\n",
     "    g = Graph()\n",
     "    for i in range(node_num):\n",
     "        g.nodes.append(Node())\n",
@@ -134,26 +150,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Node[82], Node[83], Node[83], Node[80], Node[74], Node[67], Node[80], Node[86], Node[78], Node[83], Node[83], Node[73], Node[87], Node[69], Node[80], Node[76], Node[85], Node[71], Node[74], Node[76], Node[82], Node[76], Node[74], Node[82], Node[80], Node[83], Node[68], Node[92], Node[89], Node[82], Node[80], Node[83], Node[75], Node[77], Node[76], Node[75], Node[75], Node[76], Node[77], Node[72], Node[74], Node[74], Node[81], Node[72], Node[87], Node[82], Node[73], Node[80], Node[81], Node[75], Node[89], Node[87], Node[74], Node[77], Node[79], Node[83], Node[82], Node[78], Node[82], Node[77], Node[86], Node[82], Node[81], Node[82], Node[79], Node[83], Node[77], Node[76], Node[70], Node[84], Node[79], Node[78], Node[70], Node[75], Node[76], Node[78], Node[65], Node[89], Node[87], Node[76], Node[80], Node[88], Node[87], Node[79], Node[78], Node[81], Node[76], Node[86], Node[78], Node[77], Node[84], Node[78], Node[73], Node[79], Node[76], Node[84], Node[83], Node[81], Node[78], Node[76]]\n",
-      "79.06\n"
+      "[Node[81], Node[73], Node[73], Node[84], Node[75], Node[76], Node[76], Node[89], Node[77], Node[77], Node[70], Node[77], Node[83], Node[88], Node[75], Node[86], Node[86], Node[75], Node[83], Node[81], Node[73], Node[70], Node[78], Node[79], Node[83], Node[86], Node[71], Node[83], Node[85], Node[77], Node[80], Node[80], Node[74], Node[70], Node[77], Node[83], Node[80], Node[76], Node[84], Node[76], Node[80], Node[75], Node[82], Node[86], Node[79], Node[74], Node[77], Node[74], Node[77], Node[67], Node[73], Node[89], Node[74], Node[82], Node[89], Node[81], Node[77], Node[81], Node[87], Node[87], Node[78], Node[76], Node[74], Node[82], Node[79], Node[77], Node[82], Node[74], Node[85], Node[74], Node[81], Node[83], Node[77], Node[90], Node[88], Node[82], Node[79], Node[77], Node[76], Node[68], Node[72], Node[80], Node[82], Node[83], Node[82], Node[83], Node[80], Node[79], Node[75], Node[76], Node[76], Node[77], Node[83], Node[80], Node[77], Node[73], Node[85], Node[88], Node[76], Node[84]]\n",
+      "79.14\n"
      ]
     }
    ],
    "source": [
     "NUM_NODES = 100\n",
-    "a = create_graph(NUM_NODES, 0.5)\n",
+    "a = create_graph_simple(NUM_NODES, 0.5)\n",
     "total = 0\n",
     "for n in a.nodes:\n",
     "    total += n.degree()\n",
     "print(a)\n",
     "print(total/NUM_NODES)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time step\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: here should be a function that will be run every timestep. It will include two for loops that go over all nodes in the graph: in the first one it will put into a dictionary the position of the current node in the list of nodes, which will lead to its new frequency. In the second one it will go over the dictionary and update the frequencies."
    ]
   }
  ],
