--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -58,6 +58,7 @@
     "    def __init__(self):\n",
     "        self.neighbors: list[\"Node\"] = []\n",
     "        self.friend_group: float = random.random()\n",
+    "        self.frequency: float = 0\n",
     "        \n",
     "    def __repr__(self):\n",
     "        return f\"Node[{len(self.neighbors)}]\"\n",
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +151,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Node[81], Node[73], Node[73], Node[84], Node[75], Node[76], Node[76], Node[89], Node[77], Node[77], Node[70], Node[77], Node[83], Node[88], Node[75], Node[86], Node[86], Node[75], Node[83], Node[81], Node[73], Node[70], Node[78], Node[79], Node[83], Node[86], Node[71], Node[83], Node[85], Node[77], Node[80], Node[80], Node[74], Node[70], Node[77], Node[83], Node[80], Node[76], Node[84], Node[76], Node[80], Node[75], Node[82], Node[86], Node[79], Node[74], Node[77], Node[74], Node[77], Node[67], Node[73], Node[89], Node[74], Node[82], Node[89], Node[81], Node[77], Node[81], Node[87], Node[87], Node[78], Node[76], Node[74], Node[82], Node[79], Node[77], Node[82], Node[74], Node[85], Node[74], Node[81], Node[83], Node[77], Node[90], Node[88], Node[82], Node[79], Node[77], Node[76], Node[68], Node[72], Node[80], Node[82], Node[83], Node[82], Node[83], Node[80], Node[79], Node[75], Node[76], Node[76], Node[77], Node[83], Node[80], Node[77], Node[73], Node[85], Node[88], Node[76], Node[84]]\n",
-      "79.14\n"
+      "[Node[51], Node[53], Node[44], Node[49], Node[59], Node[48], Node[57], Node[50], Node[53], Node[49], Node[52], Node[44], Node[37], Node[54], Node[56], Node[54], Node[45], Node[45], Node[51], Node[52], Node[50], Node[54], Node[42], Node[58], Node[47], Node[51], Node[42], Node[46], Node[50], Node[47], Node[50], Node[52], Node[54], Node[51], Node[56], Node[49], Node[59], Node[52], Node[52], Node[51], Node[54], Node[49], Node[48], Node[51], Node[59], Node[46], Node[49], Node[47], Node[50], Node[55], Node[54], Node[41], Node[48], Node[56], Node[55], Node[45], Node[48], Node[42], Node[49], Node[45], Node[50], Node[51], Node[51], Node[45], Node[43], Node[50], Node[45], Node[41], Node[44], Node[61], Node[49], Node[47], Node[49], Node[51], Node[46], Node[48], Node[55], Node[61], Node[55], Node[42], Node[44], Node[53], Node[35], Node[56], Node[53], Node[44], Node[49], Node[50], Node[50], Node[48], Node[44], Node[54], Node[55], Node[43], Node[52], Node[47], Node[49], Node[47], Node[49], Node[51]]\n",
+      "49.64\n"
      ]
     }
    ],
@@ -176,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Time step\n"
+    "### Timestep Function\n"
    ]
   },
   {
@@ -184,6 +185,33 @@
    "metadata": {},
    "source": [
     "TODO: here should be a function that will be run every timestep. It will include two for loops that go over all nodes in the graph: in the first one it will put into a dictionary the position of the current node in the list of nodes, which will lead to its new frequency. In the second one it will go over the dictionary and update the frequencies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def step_rule(node: Node) -> float:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_timestep(g: Graph) -> None:\n",
+    "    # Goes through all of the nodes in the graph and adds it to a dictionary, pointing at its soon-to-be frequency.\n",
+    "    # Then goes through all of the nodes again.\n",
+    "    # Has to go through all of them twice so that the function step_rule will consider only the old frequencies and not the new ones. \n",
+    "    d: dict[Node, float] = {}\n",
+    "    for node in g.nodes:\n",
+    "        d[node] = step_rule(node)\n",
+    "    for node, freq in d.items():\n",
+    "        node.frequency = freq"
    ]
   }
  ],
