first step rule!

--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "# Setup"
    ]
   },
   {
@@ -193,8 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def step_rule(node: Node) -> float:\n",
-    "    pass"
+    "def step_rule_follow_random_neighbor(node: Node) -> float:\n",
+    "    return random.choice(node.neighbors).frequency"
    ]
   },
   {
@@ -209,10 +209,24 @@
     "    # Has to go through all of them twice so that the function step_rule will consider only the old frequencies and not the new ones. \n",
     "    d: dict[Node, float] = {}\n",
     "    for node in g.nodes:\n",
-    "        d[node] = step_rule(node)\n",
+    "        d[node] = step_rule_follow_random_neighbor(node)\n",
     "    for node, freq in d.items():\n",
     "        node.frequency = freq"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
