--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -190,9 +190,12 @@
    "source": [
     "### Step Rules\n",
     "\n",
-    "* `follow_random_neighbor`: chooses a random neighbor and returns its frequency. If given node has no neighbors, it returns the frequency it already has.\n",
+    "Each step rule function recieves a node as its parameter and returns the new frequency it calculated for this node.\n",
     "\n",
-    "No other step rules for now."
+    "* `follow_random_neighbor`: chooses a random neighbor and returns its frequency.\n",
+    "* `big_or_small_average`: if the average of the neighbors' frequencies is larger than 0.3, returns the average of the neighbors' frequencies that are larger than 0.3. If the average is smaller than 0.3, same only with the frequencies that are smaller. Might want to tweak this number a little bit, maybe make it 0.5 based on results.\n",
+    "\n",
+    "If the step rule functions are given a node with 0 neighbors, they return its current frequency."
    ]
   },
   {
@@ -202,9 +205,26 @@
    "outputs": [],
    "source": [
     "def step_rule_follow_random_neighbor(node: Node) -> float:\n",
-    "    if len(node.neighbors) == 0:\n",
+    "    if node.degree() == 0:\n",
     "        return node.frequency\n",
     "    return random.choice(node.neighbors).frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def step_rule_big_or_small_average(node: Node) -> float:\n",
+    "    if node.degree() == 0:\n",
+    "        return node.frequency\n",
+    "        # so that we wouldn't divide by 0 in the next line\n",
+    "    avg_neighbor_freq = sum(n.frequency for n in node.neighbors) / node.degree()\n",
+    "    if avg_neighbor_freq > 0.3:\n",
+    "        return sum(n.frequency for n in node.neighbors if n.frequency > 0.3) # python is so beautiful\n",
+    "    else:\n",
+    "        return sum(n.frequency for n in node.neighbors if n.frequency <= 0.3)"
    ]
   },
   {
