--- a/linguistics_simulation/simulation.ipynb
+++ b/linguistics_simulation/simulation.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +195,7 @@
     "* `follow_random_neighbor`: chooses a random neighbor and returns its frequency.\n",
     "* `big_or_small_average`: if the average of the neighbors' frequencies is larger than 0.5, returns the average of the neighbors' frequencies that are larger than 0.5. If the average is smaller than 0.5, same only with the frequencies that are smaller. <br>\n",
     "  *observation*: pushes every frequency to its limit, resulting in the average frequency getting to the maximum or minimum point very very quickly.\n",
+    "* **idea**: add an element `consistency: int` to class Node. Every timestep, every node with a frequency larger than some number (say, 0.5) will get a `consistency += 1`. In the time rule, if the consistency is larger than some number (say, 10), the frequency will drop to some precentage of itself (say, 20% of the current frequency). We can also add some randomality by doing `if consistency > 10 and random.random() > 0.5` instead of just the first part. Notice that this time step cannot stand up on its own and should also be added some more features. This is only between a node and itself, so it wouldn't do anything to the spreading of the word.\n",
     "\n",
     "If the step rule functions are given a node with 0 neighbors, they return its current frequency."
    ]
