--- a/one_letter_game/one_letter.ipynb
+++ b/one_letter_game/one_letter.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import string\n",
     "from one_letter_game import word_graph\n",
     "from utils import graph"
    ]
@@ -21,16 +22,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3264\n"
+     ]
+    }
+   ],
    "source": [
-    "words = [\"dog\", \"cat\", \"cog\", \"cot\", \"fun\"]"
+    "words = open(\"one_letter_game/words.txt\").read().split()\n",
+    "words = [word for word in words if all(c in string.ascii_lowercase for c in word)]\n",
+    "words = [word for word in words if len(word) == 5]\n",
+    "print(len(words))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,30 +51,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "['house',\n",
+       " 'rouse',\n",
+       " 'rouge',\n",
+       " 'gouge',\n",
+       " 'gorge',\n",
+       " 'forge',\n",
+       " 'forte',\n",
+       " 'forts',\n",
+       " 'ports',\n",
+       " 'pouts',\n",
+       " 'pours',\n",
+       " 'sours',\n",
+       " 'slurs',\n",
+       " 'blurs',\n",
+       " 'blurt',\n",
+       " 'blunt']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "word_graph.find_path(g, \"cat\", \"dog\")"
+    "word_graph.find_path(g, \"house\", \"blunt\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
