Function that finds the two furthest words in the graph

--- a/one_letter_game/one_letter.ipynb
+++ b/one_letter_game/one_letter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,27 +22,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3264\n"
+      "38617\n"
      ]
     }
    ],
    "source": [
     "words = open(\"one_letter_game/words.txt\").read().split()\n",
     "words = [word for word in words if all(c in string.ascii_lowercase for c in word)]\n",
-    "words = [word for word in words if len(word) == 5]\n",
+    "words = [word for word in words]\n",
     "print(len(words))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        " 'blunt']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
